# coralogix-aws-shipper

./: .cfn-lint.yaml  .cfnlintrc  .gitattributes  .gitignore  .markdownlinkcheckconfig.json  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  packaged.yaml  requirements.txt  rust-toolchain.toml  samconfig.toml  template-govcloud.yaml  template.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: Changelog.yaml  Documention_sync.yaml  Documents_Validation.yaml  build-check.yaml  publish-rc.yaml  publish.yaml  secret-scan.yaml  sync.yml  test.yml  tests.yaml  url_Validation.yaml  version_validtion.yaml
ci/: Dockerfile.builder  fips-build.sh
custom-resource/: index.py
custom-resource-govcloud/: index.py  mypy.ini  pyproject.toml
docs/: govcloud-compatibility-matrix.md  govcloud-deployment-guide.md  govcloud-release-checklist.md
docs/superpowers/status/: 2026-06-01-aws-lc-fips-lambda-build.md  2026-06-01-rand-remediation.md  2026-06-01-rustls-webpki-remediation.md
examples/: README.md
examples/firehose-metrics-private-link/: README.md  parameters.example.json
examples/firehose-metrics-private-link/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
examples/s3-kms-encrypted-logs/: README.md  parameters.example.json
examples/s3-kms-encrypted-logs/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/s3-multiple-buckets-one-lambda/: README.md  parameters.example.json
examples/s3-multiple-buckets-one-lambda/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/sqs-multi-account-central-lambda/: README.md  parameters.example.json
examples/sqs-multi-account-central-lambda/terraform/: .gitignore  README.md  data.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: changelog_check.sh  gen_yace_services_json.py  package-linux-arm64.sh  package-linux-x86-64.sh
src/: aws_runtime.rs  clients.rs  combined_event.rs  config.rs  coralogix.rs  custom_metadata.rs  ecr.rs  events.rs  lib.rs  main.rs  process.rs
src/logs/: config.rs  coralogix.rs  ecr.rs  mod.rs  process.rs  transform.rs
src/metrics/: config.rs  mod.rs  process.rs  tag_enrichment.rs  yace_services.json
tests/: integration.rs  logs.rs  metrics.rs  starlark_tests.rs
tests/fixtures/: cwstream_metrics.json
tests/fixtures/scripts/: filter_logs.star  parse_json_builtin.star  parse_json_invalid.star  print_builtin.star
tests/fixtures/starlark/: batch_one_fails.star  bench_batch.star  bench_compile.star  bench_transform.star  cloudtrail_enrich.star  cloudwatch_enrich.star  csv_enrich.star  enrich.star  helpers.star  missing_transform.star  non_callable_transform.star  print_debug.star  return_bool.star  return_dict.star  return_empty_string.star  return_int.star  return_none.star  return_string.star  to_json_builtin.star  unnest.star  unnest_filter.star  vpcflow_enrich.star
tests/starlark/: benches.rs  mod.rs  pipeline.rs  property_tests.rs  script_loader_integration.rs  transform.rs
tests/starlark/fuzz/: Cargo.toml
tests/starlark/fuzz/fuzz_targets/: starlark_compile.rs
