[package]
name = "coralogix-aws-shipper"
version = "1.1.0"
edition = "2021"

[dependencies]
aws-smithy-runtime-api = "1.7.1"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3", "sns", "cloudwatch_logs", "sqs", "kinesis", "kafka", "ecr_scan", "firehose"] }
aws-config = "1.5.4"
aws-sdk-s3 = "1.41.0"
aws-sdk-ecr = "1.35.0"
aws-sdk-secretsmanager = "1.39.0"
cx_sdk_rest_logs = { git = "ssh://git@github.com/coralogix/coralogix-sdk-rust", default-features = false, features=["rustls"] }
cx_sdk_core = { git = "ssh://git@github.com/coralogix/coralogix-sdk-rust", default-features = false}
derive_more = "0.99.18"
fancy-regex ="0.13.0"
flate2 = "1.0"
futures = "0.3.17"
http = "1.1.0"
itertools = "0.12.0"
lambda_runtime = "0.10.0"
thiserror = "1.0.61"
time = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
percent-encoding = "2.3.1"
async-trait = "0.1.74"
temp-env = { version = "0.3.6", features = ["async_closure"] }
aws-smithy-runtime = { version = "1.1.7", features = ["test-util"] }
aws-smithy-types = "1.1.7"
base64 = "0.22.0"
aws-sdk-sqs = "1.18.0"
chrono = "0.4.37"
async-recursion = "1.1.0"
md5 = "0.7.0"
anyhow = "1.0.86"
aws-sdk-sts = "1.49.0"
once_cell = "1.20.2"
opentelemetry-proto = "0.27.0"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = "0.12.9"

[dev-dependencies]
pretty_assertions_sorted = "1.2.1"
test-log = "0.2.16"
wiremock = "0.6.2"
